# project1_stoyalovsky_konstantin_M25-555

./: .gitignore  LICENSE  Makefile  README.md  demo.cast  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
